--- a/pages/home.html
+++ b/pages/home.html
@@ -7,6 +7,18 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     
     <title>Power Editor - modern & powerfull editor</title>
+
+    <meta property="og:title" content="Power Editor - modern & power text editor for Windows" />
+    <meta name="description" content="Power Editor is created for more comfortable code and text writing exlusively for Windows devices. Powerful code environment provide more productivity and new features based on UWP and WinUI user experience. Build the future with next Gen editor for Windows." />
+    <meta property="og:url" content="https://dmitryborodiy.github.io/PowerEditor/" />
+    <meta property="og:image" content="https://dmitryborodiy.github.io/PowerEditor/assets/LaptopScreenshot.png" />
+
+    <meta name="twitter:title" content="Power Editor - modern & power text editor for Windows" />
+    <meta name="twitter:description" content="Power Editor is created for more comfortable code and text writing exlusively for Windows devices. Powerful code environment provide more productivity and new features based on UWP and WinUI user experience. Build the future with next Gen editor for Windows." />
+    <meta name="twitter:image" content="https://dmitryborodiy.github.io/PowerEditor/assets/LaptopScreenshot.png" />
+    <meta name="twitter:card" content="summary_large_image" />
+
+    <meta property="og:site_name" content="Power Editor" />
     
     <!-- ReactJS -->
     <script src="https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
