--- a/pages/home.html
+++ b/pages/home.html
@@ -100,7 +100,26 @@
         </div>
       </div>
       <span id="screenshot-ui"></span>
+      <br />
+    </section>
+    <br />
+    <section id="content">
+        <section id="info-design" style="margin-top: 35px;">
+            <span class="badge">Design</span>
+            <h1 style="padding: 0px; margin: 15px;">Power meets beauty.</h1>
+            <p style="max-width: 680px; display: inline-block; position: relative; top: -10px;">
+                Explore a beautiful Fluent-first design.
+                Write your code & text with increased productivity.
+                Work across multiple opened files & folders with tabs. And so much more.
+            </p>
+            <div id="info-design-actions">
+                <fluent-button appearance="accent" onclick="document.location.href = 'https://www.microsoft.com/store/productId/9NCXLRSKPL9K';">Try it out</fluent-button>
+                <fluent-button style="margin-left: 3px;" onclick="document.location.href = 'https://www.microsoft.com/design/fluent/';">Fluent design</fluent-button>
+            </div>
+            <div id="app-rect">
+                <span id="app-screen"></span>
+            </div>
+        </section>
     </section>
   </body>
-
 </html>
