--- a/pages/home.html
+++ b/pages/home.html
@@ -120,6 +120,15 @@
                 <span id="app-screen"></span>
             </div>
         </section>
+        <section id="features-info">
+          <div>
+            <span class="badge">Features</span>
+            <h1>It already does that.</h1>
+            <p>
+              Tabs & multiple workspaces? File content prteview? Hybrid, productive and powerful work? Yes it's all you can with Power Editor!
+            </p>
+          </div>
+        </section>
     </section>
   </body>
 </html>
