--- a/pages/home.html
+++ b/pages/home.html
@@ -121,10 +121,10 @@
             </div>
         </section>
         <section id="features-info">
-          <div>
+          <div style="margin-top: -75px;">
             <span class="badge">Features</span>
-            <h1>It already does that.</h1>
-            <p>
+            <h1 style="margin-top: 16px;">It already does that.</h1>
+            <p style="margin-top: -18px; width: 100%; display: inline-block; max-width: 560px;">
               Tabs & multiple workspaces? File content prteview? Hybrid, productive and powerful work? Yes it's all you can with Power Editor!
             </p>
           </div>
