--- a/main.html
+++ b/main.html
@@ -57,12 +57,6 @@
                 <a style="position: relative; bottom: 6px; left: 6px; display: inline-block;">What's new?</a>
               </div>
             </fluent-tab>
-            <fluent-tab id="docs" class="nav-menu-item">
-              <div class="table" style="position: relative; right: 6px;">
-                <i class="icon icon-ic_fluent_book_number_20_regular" style="font-size: 20px;display:inline-block;"></i>
-                <a style="position: relative; bottom: 6px; left: 6px; display: inline-block;">Docs</a>
-              </div>
-            </fluent-tab>
             <fluent-tab id="feedback" class="nav-menu-item">
               <div class="table" style="position: relative; right: 6px;">
                 <i class="icon icon-ic_fluent_person_feedback_20_regular" style="font-size: 20px;display:inline-block;"></i>
@@ -71,7 +65,6 @@
             </fluent-tab>
             <fluent-tab-panel id="appsPanel"></fluent-tab-panel>
             <fluent-tab-panel id="entreesPanel"></fluent-tab-panel>
-            <fluent-tab-panel id="dessertsPanel"></fluent-tab-panel>
             <fluent-tab-panel id="feedbackPanel"></fluent-tab-panel>
           </fluent-tabs>
         </div>
@@ -132,19 +125,13 @@
                 <a style="display: inline-block;position: relative;top: -3px;padding-left: 10px;">Blog</a>
               </span>
             </fluent-option>
-            <fluent-option value="docs/docs.html" style="border: none; background-color: transparent; height: 40px;">
-              <span style="display: table; width: 100%; padding-left: 4px;">
-                <i class="icon icon-ic_fluent_book_number_20_regular" style="display: inline-block;font-size: 20px;position: relative;top: 2px;"></i>
-                <a style="display: inline-block;position: relative;top: -3px;padding-left: 10px;">Docs</a>
-              </span>
-            </fluent-option>
             <fluent-option value="pages/feedback.html" style="border: none; background-color: transparent; height: 40px;">
               <span style="display: table; width: 100%; padding-left: 4px;">
                 <i class="icon icon-ic_fluent_person_feedback_20_regular" style="display: inline-block;font-size: 20px;position: relative;top: 2px;"></i>
                 <a style="display: inline-block;position: relative;top: -3px;padding-left: 10px;">Send feedback</a>
               </span>
             </fluent-option>
-            <fluent-option value="downloads/downloads.html" style="border: none; background-color: transparent; height: 40px;">
+            <fluent-option value="https://www.microsoft.com/store/productId/9NLHP5KRXZQ7" style="border: none; background-color: transparent; height: 40px;">
               <span style="display: table; width: 100%; padding-left: 4px;">
                 <i class="icon icon-ic_fluent_arrow_download_20_regular" style="display: inline-block;font-size: 20px;position: relative;top: 2px;"></i>
                 <a style="display: inline-block;position: relative;top: -3px;padding-left: 10px;">Downloads</a>
