--- a/pages/home.html
+++ b/pages/home.html
@@ -132,41 +132,78 @@
               Tabs & multiple workspaces? File content preview? Hybrid, productive and powerful work? Yes it's all you can with Power Editor!
             </p>
             <br />
-            <div style="display: inline-block; position: relative;">
-              <fluent-tabs activeid="tabs">
-                <!-- Tabs -->
-                <fluent-tab id="tabs" style="margin-left: 10px; margin-right: 10px;">Tabs</fluent-tab>
-                <fluent-tab id="files" style="margin-left: 10px; margin-right: 10px;">Files</fluent-tab>
-                <fluent-tab id="editor" style="margin-left: 10px; margin-right: 10px;">Editor</fluent-tab>
-                <fluent-tab id="xaml" style="margin-left: 10px; margin-right: 10px;">XAML Editing</fluent-tab>
-                <!-- Tabs id's -->
-                <fluent-tab-panel id="tabsPanel">
-                  <span class="app-screen-ui">
-                    <div>
-                      <div class="device device-surface-book" style="transform: scale(1.2); position: relative; top: 60px;">
-                        <div class="device-frame"><img class="device-screen" src="assets/img/bg-11.jpg" loading="lazy"></div>
-                        <div class="device-stripe"></div>
-                        <div class="device-header"></div>
-                        <div class="device-sensors"></div>
-                        <div class="device-btns"></div>
-                        <div class="device-power"></div>
-                        <div class="device-home"></div>
-                      </div>
-                    </div>
-                  </span>
-                </fluent-tab-panel>
-                <fluent-tab-panel id="filesPanel">
-                  <span class="app-screen-ui"></span>
-                </fluent-tab-panel>
-                <fluent-tab-panel id="editorPanel">
-                  <span class="app-screen-ui"></span>
-                </fluent-tab-panel>
-                <fluent-tab-panel id="xamlPanel">
-                  <span class="app-screen-ui"></span>
-                </fluent-tab-panel>
-              </fluent-tabs>
+            <div style="display: inline-block; position: relative; width: 100%;">
+                <div id="features-grid" class="table" style="margin-top: 20px; width: 100%;">
+                    <span class="card-ui table-item" style="width: 320px; height: 220px; text-align: left; display: inline-block; margin: 8px;">
+                        <div>
+                            <img height="60px" width="60px" src="https://img.icons8.com/fluency/96/null/hard-working.png" />
+                            <h3>Powerfull & productive</h3>
+                            <p>
+                                Work with code and text at a high level.
+                                With Power Editor, you can work more productively 
+                                and comfortably than with other editors 
+                                from the Microsoft store. 
+                            </p>
+                        </div>
+                    </span>
+                    <span class="card-ui table-item" style="width: 320px; height: 220px; text-align: left; display: inline-block; margin: 8px;">
+                        <div>
+                            <img height="60px" width="60px" src="https://img.icons8.com/fluency/96/null/drag-and-drop.png" />
+                            <h3>Modern & convenient</h3>
+                            <p>
+                                Edit and create files with different text extensions. 
+                                Power Editor supports many file types and language syntaxes, 
+                                allowing you to work with different types of projects.
+                            </p>
+                        </div>
+                    </span>
+                    <span class="card-ui table-item" style="width: 320px; height: 220px; text-align: left; display: inline-block; margin: 8px;">
+                        <div>
+                            <img height="60px" width="60px" src="https://img.icons8.com/fluency/96/null/code.png" />
+                            <h3>Powerful editor workspace</h3>
+                            <p>
+                                An easy-to-use coding environment built on top of 
+                                the Monaco open source editor will allow you to code more 
+                                conveniently and efficiently.
+                            </p>
+                        </div>
+                    </span>
+                    <span class="card-ui table-item" style="width: 320px; height: 220px; text-align: left; display: inline-block; margin: 8px;">
+                        <div>
+                            <img height="60px" width="60px" src="https://img.icons8.com/fluency/96/null/apps-tab.png" />
+                            <h3>Multitasking</h3>
+                            <p>
+                                Switching between tasks has never been as easy 
+                                and convenient as it is now. Work with a large amount 
+                                of code or text in one window by quickly switching 
+                                between files.
+                            </p>
+                        </div>
+                    </span>
+                    <span class="card-ui table-item" style="width: 320px; height: 220px; text-align: left; display: inline-block; margin: 8px;">
+                        <div>
+                            <img height="60px" width="60px" src="https://img.icons8.com/fluency/96/null/microsoft-onedrive-2019.png" />
+                            <h3>Cloud integrated</h3>
+                            <p>
+                                Sync your files and folders to the cloud, as well as your 
+                                settings and preferences, with your Microsoft 365 
+                                account and OneDrvie. <br /> <br />
+                            </p>
+                        </div>
+                    </span>
+                </div>
             </div>
           </div>
+        </section>
+        <br />
+        <section id="price-availability" style="padding-top: 32px;">
+            <div>
+                <span class="badge">Pricing & availability</span>
+                <h1 style="margin-top: 16px;">Get a lot by giving so little.</h1>
+                <p style="margin-top: -18px; width: 100%; display: inline-block; max-width: 560px;">
+
+                </p>
+            </div>
         </section>
     </section>
   </body>
